SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Ocean_Ebs_Request__c.object
<CustomObject>
    <fields>
        <fullName>ADO_Notes__c</fullName>
        <label>ADO Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Account__c</fullName>
        <label>AWS Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Aws_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Component__c</fullName>
        <label>Application Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Option_Year__c</fullName>
        <label>CSP Option Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBS_Request_ID__c</fullName>
        <displayFormat>EBS-REQUEST-{0000}</displayFormat>
        <label>EBS Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Environment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Cost__c</fullName>
        <label>Estimated Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IOPS__c</fullName>
        <label>IOPS</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Requested__c</fullName>
        <label>Number of Months Requested</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Volumes__c</fullName>
        <label>Number of Volumes</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OCEAN_REQUEST</label>
        <referenceTo>Ocean_Request__c</referenceTo>
        <relationshipLabel>Ocean_Ebs_Storage</relationshipLabel>
        <relationshipName>Ocean_Ebs_Storage</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Resource_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Snapshot_Storage_GBMonth__c</fullName>
        <label>Snapshot Storage (GB/Month)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Size_GB__c</fullName>
        <label>Storage Size (GB)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Cost__c</fullName>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_Type__c</fullName>
        <label>Volume Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_EBS_VolumeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <label>Wave</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ocean_Ebs_Storage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EBS_Request_ID__c</columns>
        <columns>Project__c</columns>
        <columns>Application__c</columns>
        <columns>Wave__c</columns>
        <columns>CSP_Option_Year__c</columns>
        <columns>AWS_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Ocean_Ebs_Storage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ocean_Ebs_Storage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>